# Site_Marketplace

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/auth/: send_mail.py  tokens.py  utils.py
app/core/: config.py  setup_test_data.py
app/database/: crud.py  db_helper.py  minio_helper.py  models.py
app/repositories/: article_repository.py  articles.py  s3_repository.py  users.py
app/routers/: routers_articles.py  routers_auth.py  routers_blog.py
app/schemas/: schemas.py
app/services/: article_service.py
src/app/: main.py
src/app/auth/: README.md  confirmation_email.html  send_mail.py  tokens.py  utils.py
src/app/core/: config.py
src/app/database/: db_helper.py  minio_helper.py  models.py
src/app/repositories/: article_repository.py  s3_repository.py  users_repository.py
src/app/routers/: routers_articles.py  routers_auth.py
src/app/schemas/: schemas.py
src/app/services/: article_service.py
